; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_win.c_vlclua_console_read.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_win.c_vlclua_console_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_LINE_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_console_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_console_read(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @MAX_LINE_LENGTH, align 4
  %7 = add nsw i32 %6, 1
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %3, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @GetConsole(i32* %11)
  %13 = call i32 @ReadWin32(i32 %12, i8* %10, i32* %5)
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @lua_pushlstring(i32* %14, i8* %10, i32 %15)
  %17 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %17)
  ret i32 1
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ReadWin32(i32, i8*, i32*) #2

declare dso_local i32 @GetConsole(i32*) #2

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
